NOD-680 Implementazione History